# barcode_reader_opencv

./: CMakeLists.txt  README.md  main.cpp
